cleaned the code up a little and added a git ignore file

--- a/blog-preview-card-main/index.html
+++ b/blog-preview-card-main/index.html
@@ -12,22 +12,25 @@
   
   <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <div class="container">
     <img src="images//illustration-article.svg" alt="picture">
     <button>Learning</button>
-    <p id="p1">Published 21 Dec 2023</p>
-    <h4>HTML & CSS foundations</h4>
-    <p id="p2">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+    <p id="p1">
+      Published 21 Dec 2023
+    </p>
+    <h4>
+      HTML & CSS foundations
+    </h4>
+    <p id="p2">
+      These languages are the backbone of every website, defining structure, content, and presentation.
+    </p>
     <div class="bottom">
       <img id="pfp" src="images//image-avatar.webp" alt="pfp">
-      <p>Greg Hooper</p>
+      <p>
+        Greg Hooper
+      </p>
     </div>
   </div>
 </body>
