--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -12,11 +12,6 @@
   
   <title>Frontend Mentor | FAQ accordion</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <div id="container">
@@ -24,45 +19,51 @@
       <img src="images//icon-star.svg" alt="">
       <h2>FAQS</h2>
     </div>
-    <div class="q-and-a-div">
-      <button class="question" onclick="answer('one','pic1')">
+    <div class="q-and-a-div" onclick="answer('answer-one','pic1')">
+      <button class="question">
         What is Frontend Mentor, and how will it help me?
       </button>
       <img id="pic1" src="images//icon-plus.svg" alt="" >
     </div>
-    <p class="answer" id="one" hidden>
+    <p class="answer hidden" id="answer-one">
       Frontend Mentor offers realistic coding challenges to help developers improve their 
       frontend coding skills with projects in HTML, CSS, and JavaScript. It's suitable for 
       all levels and ideal for portfolio building.
     </p>
+
     <hr>
-    <div class="q-and-a-div">
-      <button class="question" onclick="answer('two','pic2')">Is Frontend Mentor free?</button>
+
+    <div class="q-and-a-div" onclick="answer('answer-two','pic2')">
+      <button class="question">Is Frontend Mentor free?</button>
       <img id="pic2" src="images//icon-plus.svg" alt="">
     </div>
-    <p class="answer" id="two" hidden>
+    <p class="answer hidden" id="answer-two">
       Yes, Frontend Mentor offers both free and premium coding challenges, with the free
       option providing access to a range of projects suitable for all skill levels.
     </p>
+
     <hr>
-    <div class="q-and-a-div">
-      <button class="question" onclick="answer('three','pic3')">
+
+    <div class="q-and-a-div" onclick="answer('answer-three','pic3')">
+      <button class="question">
         Can I use Frontend Mentor projects in my portfolio?
       </button>
       <img id="pic3" src="images//icon-plus.svg" alt="">
     </div>
-    <p class="answer" id="three" hidden>
+    <p class="answer hidden" id="answer-three">
       Yes, you can use projects completed on Frontend Mentor in your portfolio. It's an excellent
       way to showcase your skills to potential employers!
     </p>
+
     <hr>
-    <div class="q-and-a-div">
-      <button class="question" onclick="answer('four','pic4')">
+
+    <div class="q-and-a-div" onclick="answer('answer-four','pic4')">
+      <button class="question">
         How can I get help if I'm stuck on a challenge?
       </button>
       <img id="pic4" src="images//icon-plus.svg" alt="" >
     </div>
-    <div class="answer" id="four" >
+    <div class="answer hidden" id="answer-four">
       <p>
         The best place to get help is inside Frontend Mentor's Discord community. There's a help channel where you can ask questions and seek support from other community members.
       </p>
